--- a/Kubernetes/deployment.yaml
+++ b/Kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: aqt-app
     spec:
       containers:
-      - name: pandacloud-container
-        image: 894486220781.dkr.ecr.us-east-1.amazonaws.com/aqt-app-clone:latest
+      - name: aqt-container
+        image: 894486220781.dkr.ecr.us-east-1.amazonaws.com/aqt:latest
         ports:
         - containerPort: 3000
